[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stoflo"
version = "0.1.0"
description = "A lightweight stocks-and-flows system dynamics model"
readme = "readme.md"
authors = [
  { name="Andrew Ireson" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/amireson/stoflo"
Repository = "https://github.com/amireson/stoflo"
Issues = "https://github.com/amireson/stoflo/issues"

